Mejoras de seguridad